# async-data-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt  temp.py
code/: __init__.py  fastapi_server.py  full_pipeline_example.py  main.py  pyproject.toml  pytest.ini  temp.py  template.env
code/asyncdatapipeline/: __init__.py  config.py  destinations.py  monitoring.py  pipeline.py  security.py  sources.py  transformers.py
code/asyncdatapipeline/destinations/: __init__.py  api.py  base.py  factory.py  file.py  no_sql_db.py  sql_db.py
code/asyncdatapipeline/sources/: __init__.py  api.py  base.py  factory.py  file.py  twitter.py  websocket.py
code/asyncdatapipeline/sources/files/: __init__.py  base.py  csv.py  json.py  parquet.py
code/asyncdatapipeline/transformers/: __init__.py  base.py  factory.py  nsfw.py  text.py
code/docker/: docker-compose.yml  mongo-init.js  postgres-init.sql
code/tests/: conftest.py  test_config.py  test_destinations.py  test_monitoring.py  test_pipeline.py  test_sources.py  test_transformers.py
doc/: README.md
