[project]
name = "woven"
version = "0.1.0"
description = "Asynchronous data pipeline for twitter data collection and processing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocsv==1.3.2",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "anyio==4.9.0",
    "asyncpg>=0.30.0",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "certifi==2025.4.26",
    "faker==37.3.0",
    "fastapi>=0.115.12",
    "filetype==1.2.0",
    "frozenlist==1.6.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub>=0.31.2",
    "idna==3.10",
    "js2py-3-13==0.74.1",
    "lxml==5.4.0",
    "m3u8==6.0.0",
    "multidict==6.4.3",
    "propcache==0.3.1",
    "pydantic>=2.11.4",
    "pyjsparser==2.7.1",
    "pymongo>=4.13.0",
    "pyotp==2.9.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv==1.1.0",
    "rbloom>=1.5.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "socksio==1.0.0",
    "soupsieve==2.7",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "twikit==2.3.3",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
    "webvtt-py==0.5.1",
    "yarl==1.20.0",
    "cryptography>=42.0.0",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
]
